# newport-8742-picomotor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: README.md  basic_control.py
src/: __init__.py
src/picomotor/: __init__.py  controller.py  discovery.py  gui.py
